<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:title="@string/menu_edit"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/help"
        android:title="@string/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="100" />

    <item
        android:id="@+id/create_new_plan"
        android:title="@string/menu_create_new_plan"
        android:orderInCategory="101" />

    <item
        android:id="@+id/suggest_new_plan"
        android:title="@string/menu_suggest_new_plan"
        android:orderInCategory="102" />

    <item
        android:id="@+id/share"
        android:title="@string/menu_share"
        android:orderInCategory="103" />

    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        android:orderInCategory="104" />
</menu>
