<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <RelativeLayout
        android:id="@+id/subject_title_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="19dp"
        android:background="@color/green_dark"
        android:layout_below="@id/toolbar_actionbar">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/dif_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:paddingLeft="22dp"
            android:text="@string/difficult_abbrev"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/dif_label"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/weight"/>
        
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/orange_dark"/>

        <Button
            android:id="@+id/subject_continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_btn_orange"
            android:textColor="@color/white"
            android:text="@string/continue_label"/>

    </RelativeLayout>


    <ListView android:id="@+id/subject_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/gray_dark"
        android:dividerHeight="1px"
        android:layout_below="@id/subject_title_layout"
        android:layout_above="@id/bottom"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@id/subject_title_layout"
        android:background="@drawable/gd_subject_title"/>

    <ImageView
        android:id="@+id/subject_help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_help"
        android:padding="10dp"/>

    <LinearLayout
        android:id="@+id/empty"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_below="@id/subject_title_layout"
        android:layout_above="@id/bottom">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_alert"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/no_subject"
            android:layout_marginTop="12dp"/>

        </LinearLayout>

</RelativeLayout>
